Fixed the remote